tests/machine/x/rust/group_by_conditional_sum.error
error[E0308]: mismatched types
  --> /tmp/TestRustCompiler_VMValid_Goldengroup_by_conditional_sum3721563171/001/prog.rs:27:461
   |
27 | ...e: sum(&{ let mut tmp3 = Vec::new();for x in &g.clone().items { tmp3.push(if x.flag != Default::default() { x.val } else { 0 }); } tmp3 }) / sum(&{ let mut tmp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.val); } tmp4 }) })...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `f64`, found `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
